--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -86,6 +86,10 @@ jobs:
         run: |
          docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
          
+      - name: Remove existing container (if any)
+        run: |
+          docker rm -f your-container-name || true
+
       # - name: Stop and remove  container if running
       #   run: |
       #    docker ps -q --filter "name=studentperformance" | grep -q . && docker stop mltest && docker rm -fv mltest
