--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -88,7 +88,7 @@ jobs:
          
       - name: Remove existing container (if any)
         run: |
-          docker rm -f your-container-name || true
+          docker rm -f studentperformance || true
 
       # - name: Stop and remove  container if running
       #   run: |
